argocd/apps/keycloak/bases/generated/keycloak.yml
---
# Source: keycloak/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  labels:
    helm.sh/chart: keycloak-8.2.2
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Helm
    service: headless
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
---
# Source: keycloak/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  labels:
    helm.sh/chart: keycloak-8.2.2
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Helm
    service: http
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
---
# Source: keycloak/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    helm.sh/chart: keycloak-8.2.2
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
      app.kubernetes.io/instance: "keycloak"
  replicas: 1
  serviceName: keycloak-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/instance: "keycloak"
      annotations:
        checksum/config-sh: 093c710447efcc1d6a094cc937e6f4b14bef1a692beeb8179b62eafe746a70b9
        checksum/config-startup: 475d37792ffe81604ec9b43d698e5d501aa7ecc0b92b007e542bff25146d1d35
    spec:
      restartPolicy: Always
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
      containers:
        - name: keycloak
          image: "docker.io/jboss/keycloak:10.0.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          command:
            - /scripts/keycloak.sh
          lifecycle:
            # postStart:
            #   exec:
            #     command: ["/bin/sh", "-c", "ls"]
            
          volumeMounts:
            - name: sh
              mountPath: /scripts
              readOnly: true
            - name: secrets
              mountPath: /secrets
              readOnly: true
            - name: startup
              mountPath: /opt/jboss/startup-scripts
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /auth/
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 5
            
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1
            
          resources:
            {}
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: keycloak
                  app.kubernetes.io/instance: "keycloak"
                matchExpressions:
                  - key: role
                    operator: NotIn
                    values:
                      - test
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: keycloak
                    app.kubernetes.io/instance: "keycloak"
                  matchExpressions:
                    - key: role
                      operator: NotIn
                      values:
                        - test
                topologyKey: failure-domain.beta.kubernetes.io/zone
        
      terminationGracePeriodSeconds: 60
      volumes:
        - name: sh
          configMap:
            name: keycloak-sh
            defaultMode: 0555
        - name: secrets
          secret:
            secretName: keycloak-http
        - name: startup
          configMap:
            name: keycloak-startup
            defaultMode: 0555
---
# Source: keycloak/templates/test/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "keycloak-test-aew9i"
  labels:
    helm.sh/chart: keycloak-8.2.2
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: "keycloak"
    app.kubernetes.io/version: "10.0.0"
    app.kubernetes.io/managed-by: Helm
    role: test
  annotations:
    "helm.sh/hook": test-success
spec:
  securityContext:
    fsGroup: 1000
  containers:
    - name: keycloak-test
      image: "unguiculus/docker-python3-phantomjs-selenium:v1"
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      command:
        - python3
        - /tests/test.py
      volumeMounts:
        - name: tests
          mountPath: /tests
  volumes:
    - name: tests
      configMap:
        name: keycloak-test
  restartPolicy: Never
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - sso.test-test.com
  rules:
  - host: sso.test-test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port: 
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-http
            port:
              number: 80
